<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.scriptparser.version>0.1-SNAPSHOT</project.scriptparser.version>
        <project.strategy.version>0.1-SNAPSHOT</project.strategy.version>
        <project.xmlparser.version>0.1-SNAPSHOT</project.xmlparser.version>
        <project.CICXML4JAVA.version>1.3.0-SNAPSHOT</project.CICXML4JAVA.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <groupId>com.metadata</groupId>
    <artifactId>metadata</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>generator</module>
    </modules>

</project>